First pass at changes needed if Java 8 is required